# ares-ai

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  fix_stubs.py  fix_test.py  patch2.py  patch_execution.py  patch_execution_process.py  patch_pyright.py  patch_run_live.py  phase5.txt  pyproject.toml  pytest_results.txt
.github/: dependabot.yml
agents/: __init__.py  base.py  circuit_breaker.py  client.py  consensus.py  execution.py  improvement.py  indicators.py  journal.py  log.py  market_analyst.py  memory.py  models.py  quant.py  queue.py  reflection.py  registry.py  retry.py  risk.py  router.py  state.py  supervisor.py  vision.py
backend/: __init__.py  main.py
backtesting/: __init__.py  engine.py
configs/: models.yaml  settings.py
database/: connection.py  schema.sql
docs/: architecture.md  design.md  milestone-roadmap.md
frontend/: .gitignore  Dockerfile  next.config.ts  package.json
k8s/: configmap.yaml  deployment.yaml  frontend.yaml
landing/: package-lock.json  package.json
live_trading/: __init__.py  audit.py  engine.py  exceptions.py  safety.py
paper_trading/: __init__.py  engine.py
scripts/: daily_report.py  daily_report_loop.py  load-test.py  run_backtest.py  run_live.py  seed.py  simulate_pipeline.py  test_free_models.py
tests/: test_agent_base.py  test_agent_log.py  test_backtesting.py  test_cache.py  test_circuit_breaker.py  test_client.py  test_config.py  test_consensus.py  test_data_models.py  test_data_sources.py  test_execution_agent.py  test_improvement.py  test_indicators.py  test_ingestor.py  test_journal_agent.py  test_market_analyst.py  test_memory_agent.py  test_models.py  test_paper_trading.py  test_quant.py  test_queue.py  test_reflection_agent.py  test_registry.py  test_risk.py  (+6 more)
(+77 files in other folders)
