[project]
name = "ares-ai"
version = "0.1.0"
description = "ARES AI — Autonomous Research Execution System"
requires-python = ">=3.11"
authors = [{ name = "ARES AI Team" }]

dependencies = [
    # API
    "fastapi>=0.138.0",
    "uvicorn[standard]>=0.49.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.30.0",
    "alembic>=1.13.0",

    # Validation
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",

    # Agent orchestration
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",

    # Cache & Vector
    "redis>=5.2.0",
    "chromadb>=0.5.0",

    # HTTP & Data
    "httpx>=0.28.1",
    "pyyaml>=6.0.2",
    "python-dotenv>=1.0.0",

    # Monitoring
    "prometheus-client>=0.25.0",

    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    
    # Trading & Exchange
    "ccxt>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=7.1.0",
    "pytest-httpx>=0.30.0",
    "mypy>=1.11.0",
    "ruff>=0.15.18",
    "pre-commit>=3.8.0",
]

[tool.setuptools.packages.find]
include = ["backend*", "agents*", "database*", "configs*", "backtesting*", "paper_trading*", "live_trading*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=backend --cov=agents --cov=database --cov=backtesting --cov=paper_trading --cov=live_trading --cov-report=term --cov-report=html --cov-fail-under=80"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
disallow_untyped_defs = false

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
